--- a/Tutorials/gabbro_granite_diorite_granodiorite_classifier.ipynb
+++ b/Tutorials/gabbro_granite_diorite_granodiorite_classifier.ipynb
@@ -32,10 +32,10 @@
    "outputs": [],
    "source": [
     "# Global variables\n",
-    "trainData = '/Users/sarah/Google Drive/Sem VII/PPIA Practica Profesional de IA/Parcial 3/Train'\n",
-    "validationData = '/Users/sarah/Google Drive/Sem VII/PPIA Practica Profesional de IA/Parcial 3/Validation'\n",
+    "trainData = '../Rock-image-patches'\n",
+    "validationData = '../Rock-image-patches'\n",
     "\n",
-    "tflite_file = '/Users/sarah/Google Drive/Sem VII/PPIA Practica Profesional de IA/Parcial 3/models/rock_model2.tflite'\n",
+    "tflite_file = '../models/rock_model2.tflite'\n",
     "\n",
     "epochs = 100\n",
     "steps = 1000\n",
@@ -51,17 +51,19 @@
    "outputs": [],
    "source": [
     "# libraries\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Sequential \n",
-    "from tensorflow.keras.layers import Conv2D, MaxPooling2D \n",
-    "from tensorflow.keras.layers import Dropout, Flatten, Dense \n",
-    "from tensorflow.keras import backend as K \n",
-    "from tensorflow.keras import optimizers\n",
-    "import matplotlib.pyplot as plt\n",
-    "from livelossplot.inputs.tf_keras import PlotLossesCallback\n",
     "import os\n",
+    "import time\n",
     "import numpy as np\n",
-    "from sklearn.metrics import classification_report"
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tensorflow.keras import optimizers\n",
+    "from tensorflow.keras import backend as K\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from sklearn.metrics import classification_report\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D\n",
+    "from tensorflow.keras.layers import Dropout, Flatten, Dense\n",
+    "from livelossplot.inputs.tf_keras import PlotLossesCallback\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
    ]
   },
   {
@@ -99,7 +101,6 @@
    ],
    "source": [
     "# Data generator\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator \n",
     "\n",
     "train_datagen = ImageDataGenerator(rescale = 1. / 255, shear_range = 0.3, zoom_range = 0.3, horizontal_flip = True) \n",
     "test_datagen = ImageDataGenerator(rescale = 1. / 255) \n",
@@ -195,14 +196,17 @@
    "source": [
     "# Train model\n",
     "#with tf.device('/gpu:0'):\n",
+    "start = time.time()\n",
     "trainingmodel = model.fit(\n",
     "    train_generator, \n",
     "    epochs = epochs, \n",
     "    validation_data = validation_generator, \n",
     "    callbacks=[PlotLossesCallback()], verbose=1)\n",
-    "\n",
+    "stop = time.time()\n",
     "#model.save_weights('gabbro_granite_diorite_granodiorite_weights.h5')\n",
-    "#model.save('gabbro_granite_diorite_granodiorite.h5')"
+    "#model.save('gabbro_granite_diorite_granodiorite.h5')\n",
+    "\n",
+    "print(f\"\\nTraining time: {stop - start}s\")"
    ]
   },
   {
