--- a/train-LAB.ipynb
+++ b/train-LAB.ipynb
@@ -1378,9 +1378,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rocks",
+   "display_name": "cv",
    "language": "python",
-   "name": "rocks"
+   "name": "cv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1392,7 +1392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
