--- a/train-LAB.ipynb
+++ b/train-LAB.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <div align=\"center\">Training the different algorithms with the dominant colors data<div/><div align=\"center\">in CIELAB<div/>"
+    "# <div align=\"left\">Training the different algorithms with the dominant colors data<div/>                   <div align=\"left\">in CIELAB<div/>"
    ]
   },
   {
@@ -28,9 +28,9 @@
     "2. **SPLIT DATA**\n",
     "3. **NORMALIZE DATA**\n",
     "4. **TRAINING AND EVALUATION OF MACHINE LEARNING MODELS**  \n",
-    "    4.1 Logistic Regression (LR)  \n",
+    "    4.1 Decision Trees (DT)  \n",
     "    4.2 K-Nearest-Neighbors (KNN)  \n",
-    "    4.3 Decision Trees (DT)  \n",
+    "    4.3 Logistic Regression (LR)  \n",
     "    4.4 Support Vector Machine (SVM)  \n",
     "    4.5 Convolutional Neural Network (CNN)  \n",
     "5. **EXPORT THE BEST MODEL (KNN)**  \n",
@@ -605,10 +605,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('scales.txt', 'w') as filehandle:\n",
+    "with open('Models/scales.txt', 'w') as filehandle:\n",
     "    for listitem in normalizer.scale_:\n",
     "        filehandle.write('%s\\n' % listitem)\n",
-    "with open('mins.txt', 'w') as filehandle:\n",
+    "with open('Models/mins.txt', 'w') as filehandle:\n",
     "    for listitem in normalizer.min_:\n",
     "        filehandle.write('%s\\n' % listitem)"
    ]
@@ -634,7 +634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.1 - Logistic Regression (LR)"
+    "#### 4.1 - Decision Trees (DT)"
    ]
   },
   {
@@ -646,37 +646,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<<MODELS REPORT LOG. REGRESSION>>\n",
-      "Logistic Regression score: 0.631578947368421\n",
-      "Logistic Regression Model accuracy: 0.631578947368421\n",
+      "<<MODEL REPORT DT>>\n",
+      "Decision trees score: 0.6842105263157895\n",
+      "Decision trees accuracy: 0.6842105263157895\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     Diorite       0.60      0.35      0.44        17\n",
-      "      Gabbro       0.50      0.77      0.61        13\n",
-      "     Granite       0.81      1.00      0.90        13\n",
-      "Granodiorite       0.64      0.50      0.56        14\n",
+      "     Diorite       0.71      0.71      0.71        17\n",
+      "      Gabbro       0.56      0.69      0.62        13\n",
+      "     Granite       0.80      0.92      0.86        13\n",
+      "Granodiorite       0.67      0.43      0.52        14\n",
       "\n",
-      "    accuracy                           0.63        57\n",
-      "   macro avg       0.64      0.66      0.63        57\n",
-      "weighted avg       0.63      0.63      0.61        57\n",
+      "    accuracy                           0.68        57\n",
+      "   macro avg       0.68      0.69      0.68        57\n",
+      "weighted avg       0.69      0.68      0.68        57\n",
       "\n",
-      "Training time: 0.03157496452331543 s\n"
+      "Training time: 0.0051422119140625 s\n"
      ]
     }
    ],
    "source": [
-    "# Logistic Regression (LR)\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "logReg = LogisticRegression(solver='lbfgs')\n",
+    "# Decision Trees (DT)\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "decisionTree = DecisionTreeClassifier(class_weight='balanced')\n",
     "start = time.time()\n",
-    "logReg.fit(xtrainNorm, ytrain)\n",
+    "decisionTree.fit(xtrain, ytrain)\n",
     "stop = time.time()\n",
     "\n",
-    "print(\"<<MODELS REPORT LOG. REGRESSION>>\")\n",
-    "print(\"Logistic Regression score:\",logReg.score(xtestNorm, ytest))\n",
+    "print(\"<<MODEL REPORT DT>>\")\n",
+    "print(\"Decision trees score:\",decisionTree.score(xtest, ytest))\n",
     "\n",
-    "predictions = logReg.predict(xtestNorm)\n",
-    "print(\"Logistic Regression Model accuracy:\", metrics.accuracy_score(ytest, predictions))\n",
+    "predictions = decisionTree.predict(xtest)\n",
+    "print(\"Decision trees accuracy:\", metrics.accuracy_score(ytest, predictions))\n",
     "print(metrics.classification_report(ytest,predictions, target_names=classes_dict.values()))\n",
     "\n",
     "print(f\"Training time: {stop - start} s\")"
@@ -712,7 +712,7 @@
       "   macro avg       0.93      0.93      0.93        57\n",
       "weighted avg       0.93      0.93      0.93        57\n",
       "\n",
-      "Training time: 0.0007398128509521484 s\n"
+      "Training time: 0.0022509098052978516 s\n"
      ]
     }
    ],
@@ -738,7 +738,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.3 - Decision Trees (DT)"
+    "#### 4.3 - Logistic Regression (LR)"
    ]
   },
   {
@@ -750,37 +750,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<<MODEL REPORT DT>>\n",
-      "Decision trees score: 0.7368421052631579\n",
-      "Decision trees accuracy: 0.7368421052631579\n",
+      "<<MODELS REPORT LOG. REGRESSION>>\n",
+      "Logistic Regression score: 0.631578947368421\n",
+      "Logistic Regression Model accuracy: 0.631578947368421\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     Diorite       0.80      0.71      0.75        17\n",
-      "      Gabbro       0.59      0.77      0.67        13\n",
-      "     Granite       0.86      0.92      0.89        13\n",
-      "Granodiorite       0.73      0.57      0.64        14\n",
+      "     Diorite       0.60      0.35      0.44        17\n",
+      "      Gabbro       0.50      0.77      0.61        13\n",
+      "     Granite       0.81      1.00      0.90        13\n",
+      "Granodiorite       0.64      0.50      0.56        14\n",
       "\n",
-      "    accuracy                           0.74        57\n",
-      "   macro avg       0.74      0.74      0.74        57\n",
-      "weighted avg       0.75      0.74      0.74        57\n",
+      "    accuracy                           0.63        57\n",
+      "   macro avg       0.64      0.66      0.63        57\n",
+      "weighted avg       0.63      0.63      0.61        57\n",
       "\n",
-      "Training time: 0.0032110214233398438 s\n"
+      "Training time: 0.04183816909790039 s\n"
      ]
     }
    ],
    "source": [
-    "# Decision Trees (DT)\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "decisionTree = DecisionTreeClassifier(class_weight='balanced')\n",
+    "# Logistic Regression (LR)\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "logReg = LogisticRegression(solver='lbfgs')\n",
     "start = time.time()\n",
-    "decisionTree.fit(xtrain, ytrain)\n",
+    "logReg.fit(xtrainNorm, ytrain)\n",
     "stop = time.time()\n",
     "\n",
-    "print(\"<<MODEL REPORT DT>>\")\n",
-    "print(\"Decision trees score:\",decisionTree.score(xtest, ytest))\n",
+    "print(\"<<MODELS REPORT LOG. REGRESSION>>\")\n",
+    "print(\"Logistic Regression score:\",logReg.score(xtestNorm, ytest))\n",
     "\n",
-    "predictions = decisionTree.predict(xtest)\n",
-    "print(\"Decision trees accuracy:\", metrics.accuracy_score(ytest, predictions))\n",
+    "predictions = logReg.predict(xtestNorm)\n",
+    "print(\"Logistic Regression Model accuracy:\", metrics.accuracy_score(ytest, predictions))\n",
     "print(metrics.classification_report(ytest,predictions, target_names=classes_dict.values()))\n",
     "\n",
     "print(f\"Training time: {stop - start} s\")"
@@ -816,7 +816,7 @@
       "   macro avg       0.82      0.82      0.80        57\n",
       "weighted avg       0.83      0.81      0.80        57\n",
       "\n",
-      "Training time: 0.015475034713745117 s\n"
+      "Training time: 0.010616779327392578 s\n"
      ]
     }
    ],
