--- a/train-RGB.ipynb
+++ b/train-RGB.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <div align=\"center\">Training the different algorithms with the dominant colors data<div/><div align=\"center\">in CIELAB<div/>"
+    "# <div align=\"left\">Training the different algorithms with the dominant colors data<div/>                   <div align=\"left\">in RGB<div/>"
    ]
   },
   {
@@ -28,9 +28,9 @@
     "2. **SPLIT DATA**\n",
     "3. **NORMALIZE DATA**\n",
     "4. **TRAINING AND EVALUATION OF MACHINE LEARNING MODELS**  \n",
-    "    4.1 Logistic Regression (LR)  \n",
+    "    4.1 Decision Trees (DT)  \n",
     "    4.2 K-Nearest-Neighbors (KNN)  \n",
-    "    4.3 Decision Trees (DT)  \n",
+    "    4.3 Logistic Regression (LR)  \n",
     "    4.4 Support Vector Machine (SVM)  \n",
     "    4.5 Convolutional Neural Network (CNN)  \n",
     "5. **EXPORT THE BEST MODEL (KNN)**  \n",
@@ -612,10 +612,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('scales.txt', 'w') as filehandle:\n",
+    "with open('Models/scales.txt', 'w') as filehandle:\n",
     "    for listitem in normalizer.scale_:\n",
     "        filehandle.write('%s\\n' % listitem)\n",
-    "with open('mins.txt', 'w') as filehandle:\n",
+    "with open('Models/mins.txt', 'w') as filehandle:\n",
     "    for listitem in normalizer.min_:\n",
     "        filehandle.write('%s\\n' % listitem)"
    ]
@@ -641,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.1 - Logistic Regression (LR)"
+    "#### 4.1 - Decision Trees (DT)"
    ]
   },
   {
@@ -653,37 +653,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<<MODELS REPORT LOG. REGRESSION>>\n",
-      "Logistic Regression score: 0.631578947368421\n",
-      "Logistic Regression Model accuracy: 0.631578947368421\n",
+      "<<MODEL REPORT DT>>\n",
+      "Decision trees score: 0.7192982456140351\n",
+      "Decision trees accuracy: 0.7192982456140351\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     Diorite       0.67      0.47      0.55        17\n",
-      "      Gabbro       0.53      0.77      0.62        13\n",
-      "     Granite       0.72      1.00      0.84        13\n",
-      "Granodiorite       0.62      0.36      0.45        14\n",
+      "     Diorite       0.69      0.65      0.67        17\n",
+      "      Gabbro       0.64      0.69      0.67        13\n",
+      "     Granite       0.92      0.85      0.88        13\n",
+      "Granodiorite       0.67      0.71      0.69        14\n",
       "\n",
-      "    accuracy                           0.63        57\n",
-      "   macro avg       0.64      0.65      0.62        57\n",
-      "weighted avg       0.64      0.63      0.61        57\n",
+      "    accuracy                           0.72        57\n",
+      "   macro avg       0.73      0.72      0.73        57\n",
+      "weighted avg       0.72      0.72      0.72        57\n",
       "\n",
-      "Training time: 0.06181073188781738 s\n"
+      "Training time: 0.01154470443725586 s\n"
      ]
     }
    ],
    "source": [
-    "# Logistic Regression (LR)\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "logReg = LogisticRegression(solver='lbfgs')\n",
+    "# Decision Trees (DT)\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "decisionTree = DecisionTreeClassifier(class_weight='balanced')\n",
     "start = time.time()\n",
-    "logReg.fit(xtrainNorm, ytrain)\n",
+    "decisionTree.fit(xtrain, ytrain)\n",
     "stop = time.time()\n",
     "\n",
-    "print(\"<<MODELS REPORT LOG. REGRESSION>>\")\n",
-    "print(\"Logistic Regression score:\",logReg.score(xtestNorm, ytest))\n",
+    "print(\"<<MODEL REPORT DT>>\")\n",
+    "print(\"Decision trees score:\",decisionTree.score(xtest, ytest))\n",
     "\n",
-    "predictions = logReg.predict(xtestNorm)\n",
-    "print(\"Logistic Regression Model accuracy:\", metrics.accuracy_score(ytest, predictions))\n",
+    "predictions = decisionTree.predict(xtest)\n",
+    "print(\"Decision trees accuracy:\", metrics.accuracy_score(ytest, predictions))\n",
     "print(metrics.classification_report(ytest,predictions, target_names=classes_dict.values()))\n",
     "\n",
     "print(f\"Training time: {stop - start} s\")"
@@ -699,7 +699,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -719,7 +721,7 @@
       "   macro avg       0.80      0.79      0.79        57\n",
       "weighted avg       0.80      0.79      0.79        57\n",
       "\n",
-      "Training time: 0.0011451244354248047 s\n"
+      "Training time: 0.0025479793548583984 s\n"
      ]
     }
    ],
@@ -745,49 +747,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.3 - Decision Trees (DT)"
+    "#### 4.3 - Logistic Regression (LR)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<<MODEL REPORT DT>>\n",
-      "Decision trees score: 0.7017543859649122\n",
-      "Decision trees accuracy: 0.7017543859649122\n",
+      "<<MODELS REPORT LOG. REGRESSION>>\n",
+      "Logistic Regression score: 0.631578947368421\n",
+      "Logistic Regression Model accuracy: 0.631578947368421\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     Diorite       0.69      0.65      0.67        17\n",
-      "      Gabbro       0.64      0.69      0.67        13\n",
-      "     Granite       0.91      0.77      0.83        13\n",
-      "Granodiorite       0.62      0.71      0.67        14\n",
+      "     Diorite       0.67      0.47      0.55        17\n",
+      "      Gabbro       0.53      0.77      0.62        13\n",
+      "     Granite       0.72      1.00      0.84        13\n",
+      "Granodiorite       0.62      0.36      0.45        14\n",
       "\n",
-      "    accuracy                           0.70        57\n",
-      "   macro avg       0.72      0.71      0.71        57\n",
-      "weighted avg       0.71      0.70      0.70        57\n",
+      "    accuracy                           0.63        57\n",
+      "   macro avg       0.64      0.65      0.62        57\n",
+      "weighted avg       0.64      0.63      0.61        57\n",
       "\n",
-      "Training time: 0.0034830570220947266 s\n"
+      "Training time: 0.04471397399902344 s\n"
      ]
     }
    ],
    "source": [
-    "# Decision Trees (DT)\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "decisionTree = DecisionTreeClassifier(class_weight='balanced')\n",
+    "# Logistic Regression (LR)\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "logReg = LogisticRegression(solver='lbfgs')\n",
     "start = time.time()\n",
-    "decisionTree.fit(xtrain, ytrain)\n",
+    "logReg.fit(xtrainNorm, ytrain)\n",
     "stop = time.time()\n",
     "\n",
-    "print(\"<<MODEL REPORT DT>>\")\n",
-    "print(\"Decision trees score:\",decisionTree.score(xtest, ytest))\n",
+    "print(\"<<MODELS REPORT LOG. REGRESSION>>\")\n",
+    "print(\"Logistic Regression score:\",logReg.score(xtestNorm, ytest))\n",
     "\n",
-    "predictions = decisionTree.predict(xtest)\n",
-    "print(\"Decision trees accuracy:\", metrics.accuracy_score(ytest, predictions))\n",
+    "predictions = logReg.predict(xtestNorm)\n",
+    "print(\"Logistic Regression Model accuracy:\", metrics.accuracy_score(ytest, predictions))\n",
     "print(metrics.classification_report(ytest,predictions, target_names=classes_dict.values()))\n",
     "\n",
     "print(f\"Training time: {stop - start} s\")"
@@ -823,7 +827,7 @@
       "   macro avg       0.60      0.49      0.46        57\n",
       "weighted avg       0.59      0.53      0.46        57\n",
       "\n",
-      "Training time: 0.008641719818115234 s\n"
+      "Training time: 0.01086115837097168 s\n"
      ]
     }
    ],
